--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -5,5 +5,6 @@
 
     <color name="black">#FF000000</color>
     <color name="paper">#E7E6E8</color>
+    <color name="lightpaper">#f5f5f5</color>
     <color name="white">#FFFFFFFF</color>
 </resources>
