--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -8,10 +8,11 @@
     <color name="black">#FF000000</color>
     <color name="paper">#ecebed</color>
     <color name="lightpaper">#f5f5f5</color>
+    <color name="darkpaper">#bdbdbd</color>
     <color name="white">#FFFFFFFF</color>
 
     <!--    mood colors -->
-    <color name="pgreen">#00C1F6</color>
-    <color name="pyellow">#77dd77</color>
+    <color name="pgreen">#77dd77</color>
+    <color name="pblue">#00C1F6</color>
     <color name="pred">#ff6961</color>
 </resources>
