--- a/app/src/main/res/navigation/navigation.xml
+++ b/app/src/main/res/navigation/navigation.xml
@@ -8,8 +8,8 @@
     <fragment
         android:id="@+id/listFragment"
         android:name="com.google.gradient.red.fragments.list.ListFragment"
-        android:label="fragment_list"
-        tools:layout="@layout/fragment_list" >
+        android:label="Home"
+        tools:layout="@layout/fragment_list">
         <action
             android:id="@+id/action_listFragment_to_addFragment"
             app:destination="@id/addFragment"
@@ -28,8 +28,8 @@
     <fragment
         android:id="@+id/addFragment"
         android:name="com.google.gradient.red.fragments.add.addFragment"
-        android:label="fragment_add"
-        tools:layout="@layout/fragment_add" >
+        android:label="New Entry"
+        tools:layout="@layout/fragment_add">
         <action
             android:id="@+id/action_addFragment_to_listFragment"
             app:destination="@id/listFragment"
@@ -39,11 +39,14 @@
     <fragment
         android:id="@+id/updateFragment"
         android:name="com.google.gradient.red.fragments.update.updateFragment"
-        android:label="fragment_update"
-        tools:layout="@layout/fragment_update" >
+        android:label="Edit Entry"
+        tools:layout="@layout/fragment_update">
         <action
             android:id="@+id/action_updateFragment_to_listFragment"
             app:destination="@id/listFragment"
             app:enterAnim="@anim/from_right" />
+        <argument
+            android:name="currentItem"
+            app:argType="com.google.gradient.red.data.models.JournalData" />
     </fragment>
 </navigation>
