Implemented entry deletion! Working on "Blank slate" (deleting all entries)

--- a/app/src/main/res/menu/list_fragment_menu.xml
+++ b/app/src/main/res/menu/list_fragment_menu.xml
@@ -30,7 +30,7 @@
 
     <item
         android:id="@+id/menu_delete_all"
-        android:title="Delete all"
+        android:title="Blank slate"
         app:showAsAction="never">
     </item>
 
