--- a/app/src/main/res/layout/fragment_list.xml
+++ b/app/src/main/res/layout/fragment_list.xml
@@ -32,7 +32,7 @@
         app:tint="@color/ink" />
 
     <ImageView
-        android:id="@+id/imageView"
+        android:id="@+id/no_data_imageview"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:backgroundTint="@color/paper"
@@ -45,7 +45,7 @@
         app:layout_constraintVertical_bias="0.4" />
 
     <TextView
-        android:id="@+id/textView"
+        android:id="@+id/no_data_textview"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_margin="12sp"
@@ -55,6 +55,6 @@
         android:visibility="invisible"
         app:layout_constraintEnd_toEndOf="@+id/recyclerView"
         app:layout_constraintStart_toStartOf="@+id/recyclerView"
-        app:layout_constraintTop_toBottomOf="@+id/imageView" />
+        app:layout_constraintTop_toBottomOf="@+id/no_data_imageview" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
