Implemented "contact us" Google Form into app!

--- a/app/src/main/res/menu/list_fragment_menu.xml
+++ b/app/src/main/res/menu/list_fragment_menu.xml
@@ -26,8 +26,8 @@
     </group>
 
     <item
-        android:id="@+id/menu_support"
-        android:title="Red support"
+        android:id="@+id/menu_contact"
+        android:title="Contact developer"
         app:showAsAction="never">
     </item>
 </menu>
