--- a/app/src/main/res/layout/fragment_add.xml
+++ b/app/src/main/res/layout/fragment_add.xml
@@ -94,8 +94,9 @@
                 android:id="@+id/imageView"
                 android:layout_width="35sp"
                 android:layout_height="35sp"
-                android:src="@drawable/ic_me"
-                android:layout_gravity="center"/>
+                android:src="@mipmap/ic_launcher_round"
+                android:layout_gravity="center"
+                android:contentDescription="Entry preview image" />
 
         </androidx.cardview.widget.CardView>
 
