--- a/app/src/main/res/layout/fragment_add.xml
+++ b/app/src/main/res/layout/fragment_add.xml
@@ -6,7 +6,6 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@color/lightpaper"
-    android:padding="18sp"
     tools:context=".fragments.add.addFragment">
 
     <EditText
@@ -15,6 +14,8 @@
         android:layout_height="50dp"
         android:background="@drawable/custom_input"
         android:hint="Title"
+        android:layout_marginTop="18sp"
+        android:layout_marginHorizontal="18sp"
         android:paddingHorizontal="12dp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -28,6 +29,7 @@
         android:background="@drawable/custom_input"
         android:entries="@array/icons"
         android:paddingHorizontal="12dp"
+        android:layout_marginHorizontal="18sp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/title_et" />
@@ -42,65 +44,30 @@
         android:hint="Journal entry content"
         android:padding="12sp"
         android:textSize="16sp"
+        android:layout_marginHorizontal="18sp"
         app:layout_constraintBottom_toTopOf="@id/image_et"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/mood_spinner" />
 
-<!--    <ImageView-->
-<!--        android:id="@+id/imageView"-->
-<!--        android:layout_width="300sp"-->
-<!--        android:layout_height="300sp"-->
-<!--        app:layout_constraintBottom_toBottomOf="parent"-->
-<!--        app:layout_constraintEnd_toEndOf="parent"-->
-<!--        app:layout_constraintStart_toStartOf="parent"-->
-<!--        app:layout_constraintTop_toTopOf="parent" />-->
-
-    <androidx.constraintlayout.widget.ConstraintLayout
+    <Button
         android:id="@+id/image_et"
         android:layout_width="match_parent"
-        android:layout_height="50dp"
+        android:layout_height="60dp"
         android:layout_marginTop="8dp"
-        android:background="@drawable/custom_input"
+        android:layout_marginBottom="16sp"
+        android:layout_marginHorizontal="18sp"
+        android:backgroundTint="@color/paper"
+        android:textColor="@color/lightink"
         android:text="Entry image"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/description_et"
-        android:orientation="horizontal">
+        android:textAllCaps="false"
+        android:textSize="16sp"
+        android:gravity="left|center"/>
 
-        <TextView
-            android:id="@+id/imageStatus"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="Pick journal entry image:"
-            android:textSize="16sp"
-            app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent"
-            android:layout_margin="10sp"/>
-
-        <androidx.cardview.widget.CardView
-            android:layout_width="35sp"
-            android:layout_height="35sp"
-            app:cardCornerRadius="999sp"
-            app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintTop_toTopOf="parent"
-            android:backgroundTint="@color/lightink"
-            android:layout_margin="10sp">
-
-            <ImageView
-                android:id="@+id/imageView"
-                android:layout_width="35sp"
-                android:layout_height="35sp"
-                android:src="@mipmap/ic_launcher_round"
-                android:layout_gravity="center"
-                android:contentDescription="Entry preview image" />
-
-        </androidx.cardview.widget.CardView>
-
-    </androidx.constraintlayout.widget.ConstraintLayout>
 
 
 </androidx.constraintlayout.widget.ConstraintLayout>
