--- a/app/src/main/res/layout/fragment_update.xml
+++ b/app/src/main/res/layout/fragment_update.xml
@@ -6,13 +6,14 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@color/lightpaper"
-    android:padding="18sp"
     tools:context=".fragments.add.addFragment">
 
     <EditText
         android:id="@+id/current_title_et"
         android:layout_width="0dp"
         android:layout_height="50dp"
+        android:layout_marginHorizontal="18sp"
+        android:layout_marginTop="18sp"
         android:background="@drawable/custom_input"
         android:hint="Title"
         android:paddingHorizontal="12dp"
@@ -24,6 +25,7 @@
         android:id="@+id/current_mood_spinner"
         android:layout_width="0dp"
         android:layout_height="50dp"
+        android:layout_marginHorizontal="18sp"
         android:layout_marginTop="8dp"
         android:background="@drawable/custom_input"
         android:entries="@array/icons"
@@ -36,16 +38,35 @@
         android:id="@+id/current_description_et"
         android:layout_width="0dp"
         android:layout_height="0dp"
+        android:layout_marginHorizontal="18sp"
         android:layout_marginTop="8dp"
         android:background="@drawable/custom_input"
         android:gravity="top|start"
         android:hint="Journal entry content"
         android:padding="12sp"
         android:textSize="16sp"
-        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintBottom_toTopOf="@id/current_image_et"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/current_mood_spinner" />
+
+    <Button
+        android:id="@+id/current_image_et"
+        android:layout_width="match_parent"
+        android:layout_height="60dp"
+        android:layout_marginHorizontal="18sp"
+        android:layout_marginTop="8dp"
+        android:layout_marginBottom="16sp"
+        android:backgroundTint="@color/paper"
+        android:gravity="left|center"
+        android:text="Entry image"
+        android:textAllCaps="false"
+        android:textColor="@color/lightink"
+        android:textSize="16sp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/current_description_et" />
 
 
 </androidx.constraintlayout.widget.ConstraintLayout>
