--- a/app/src/main/res/layout/row_layout.xml
+++ b/app/src/main/res/layout/row_layout.xml
@@ -74,18 +74,26 @@
             app:layout_constraintStart_toStartOf="@+id/title_txt"
             app:layout_constraintTop_toBottomOf="@+id/description_txt" />
 
-        <ImageView
-            android:id="@+id/image"
+        <androidx.cardview.widget.CardView
+            android:id="@+id/imagecard"
             android:layout_width="match_parent"
             android:layout_height="170sp"
-            android:background="@color/lightpaper"
             app:layout_constraintTop_toBottomOf="@id/date"
+            app:layout_constraintBottom_toBottomOf="parent"
             android:layout_marginStart="20dp"
             android:layout_marginEnd="16sp"
             android:layout_marginBottom="16sp"
-            android:src="@drawable/ic_me"
-            app:layout_constraintBottom_toBottomOf="parent"
-            android:visibility="visible"/>
+            app:cardCornerRadius="12sp">
+
+            <ImageView
+                android:id="@+id/image"
+                android:layout_width="wrap_content"
+                android:layout_height="170sp"
+                android:src="@drawable/ic_me"
+                android:visibility="visible"
+                android:layout_gravity="center"/>
+
+        </androidx.cardview.widget.CardView>
 
     </androidx.constraintlayout.widget.ConstraintLayout>
 </androidx.constraintlayout.widget.ConstraintLayout>
