--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -14,6 +14,6 @@
 
     <!--    mood colors -->
     <color name="pgreen">#4ACB8A</color>
-    <color name="pblue">#FF9349</color>
+    <color name="pblue">#3BC5FB</color>
     <color name="pred">#F94348</color>
 </resources>
