Added sort by time option (default)

--- a/app/src/main/res/menu/list_fragment_menu.xml
+++ b/app/src/main/res/menu/list_fragment_menu.xml
@@ -16,6 +16,9 @@
             android:title="Sort By">
             <menu>
                 <item
+                    android:id="@+id/sort_time"
+                    android:title="Time (default)"/>
+                <item
                     android:id="@+id/sort_goodmood"
                     android:title="Good mood"/>
                 <item
